--- a/ddf-sso-widget/pom.xml
+++ b/ddf-sso-widget/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>cas-client-core</artifactId>
             <version>3.1.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${org.slf4j.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
